<resources>
    <string name="app_name">Money Lover</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="forgotPassword">Quên mật khẩu</string>
    <string name="or">Hoặc</string>
    <string name="register">Đăng ký</string>
    <string name="confirmPassword">Nhập lại mật khẩu</string>
    <string name="sendOTP">Gửi mã xác nhận</string>
    <string name="forgotPasswordTitle">Nhập email để nhận OTP</string>
    <string name="otpVerificationTitle">Nhập mã OTP</string>
    <string name="enterOtp">Nhập mã OTP đã được gửi đến email của bạn</string>
    <string name="verifyOTP">Xác nhận</string>
    <string name="overview">Tổng quan</string>
    <string name="wallet">Sổ giao dịch</string>
    <string name="budget">Ngân sách</string>
    <string name="account">Tài khoản</string>
    <string name="network_error">Không thể kết nối, vui lòng kiểm tra kết nối mạng của bạn.</string>
    <string name="network_error_button_retry">Thử lại</string>
    <string name="network_error_button_exit">Thoát</string>
    <string name="undeveloped_feature">Tính năng đang được phát triển</string>
    <string name="msg_loading">Vui lòng chờ...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Vui lòng chờ...</string>
    <string name="button_to_send_otp">Button to send OTP</string>
    <string name="resetPassword">Đặt lại mật khẩu</string>
    <string name="logout">Đăng xuất</string>
    <string name="balance_tooltip">Được tính dựa trên số dư của các ví nằm trong tổng</string>
    <string name="my_wallet">Ví của tôi</string>
    <string name="viewAll">Xem tất cả</string>
    <string name="cash">Tiền mặt</string>
    <string name="report_this_month">Báo cáo tháng này</string>
    <string name="view_report">Xem báo cáo</string>
    <string name="spending_this_month">Chi tiêu tháng này</string>
    <string name="week">Tuần</string>
    <string name="month">Tháng</string>
    <string name="latest_transaction">Giao dịch gần đây</string>
    <string name="view_detail">Xem chi tiết</string>
    <string name="view_report_for_this_stage">Xem báo cáo cho giai đoạn này</string>
    <string name="time_line">Khoảng thời gian</string>
    <string name="view_by_group">Xem theo nhóm</string>
    <string name="view_by_transaction">Xem theo giao dịch</string>
    <string name="change_balance">Điều chỉnh số dư</string>
    <string name="edit">Sửa</string>
    <string name="copy">Sao chép</string>
    <string name="delete">Xóa</string>

</resources>