<layout >

    <data>

        <variable
            name="f"
            type="com.moneylover.ui.main.app.account.AccountFragment" />
        <variable
            name="vm"
            type="com.moneylover.ui.main.app.account.AccountViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_52ssp"
        android:orientation="vertical"
        tools:context=".ui.main.app.AccountFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/account"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/sea_green"
            android:contentDescription="@string/button_to_send_otp"
            android:fontFamily="@font/be_vietnam_pro_medium"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            app:shapeAppearanceOverlay="@style/rounded_full" />

    </LinearLayout>
</layout>
