<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="f"
            type="com.moneylover.ui.main.auth.RegisterFragment" />

        <variable
            name="vm"
            type="com.moneylover.ui.main.auth.RegisterViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.main.auth.RegisterFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_6sdp"
            android:fontFamily="@font/be_vietnam_pro_medium"
            android:text="@string/register"
            style="@style/AuthTitleStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@id/textInputEmail"
                style="@style/TextInputEditTextStyleColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{f::onEmailTextChanged}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/TextInputEditTextStyleColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                app:errorIconDrawable="@null"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:onTextChanged="@{f::onPasswordTextChanged}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputConfirmPassword"
                style="@style/TextInputEditTextStyleColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                app:errorIconDrawable="@null"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:onTextChanged="@{f::onConfirmPasswordTextChanged}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:backgroundTint="@color/sea_green"
                android:fontFamily="@font/be_vietnam_pro_medium"
                android:onClick="@{() -> f.onRegisterClick()}"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"
                app:shapeAppearanceOverlay="@style/rounded_full" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_medium"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/or"
                    android:textAllCaps="true"
                    android:textColor="@color/dim_gray"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_12sdp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/be_vietnam_pro_medium"
                android:onClick="@{() -> f.onLoginClick()}"
                android:text="@string/login"
                android:textColor="@color/sea_green"
                android:textSize="@dimen/button_text_size"
                app:shapeAppearanceOverlay="@style/rounded_full" />

        </LinearLayout>

    </LinearLayout>
</layout>