<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="f"
            type="com.moneylover.ui.main.auth.ForgotPasswordOtpVerificationFragment" />

        <variable
            name="vm"
            type="com.moneylover.ui.main.auth.ForgotPasswordOtpVerificationViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/forgotPasswordOtpVerification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_18sdp"
        tools:context=".ui.main.auth.OtpVerificationFragment">

        <TextView
            style="@style/AuthTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/be_vietnam_pro_medium"
            android:text="@string/otpVerificationTitle" />

        <TextView
            style="@style/DescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/be_vietnam_pro_medium"
            android:text="@string/enterOtp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                app:boxStrokeColor="@color/sea_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/be_vietnam_pro"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:onTextChanged="@{f::onOtpTextChanged}"
                    android:textSize="@dimen/_15sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                app:boxStrokeColor="@color/sea_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/be_vietnam_pro"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:onTextChanged="@{f::onOtpTextChanged}"
                    android:textSize="@dimen/_15sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                app:boxStrokeColor="@color/sea_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/be_vietnam_pro"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:onTextChanged="@{f::onOtpTextChanged}"
                    android:textSize="@dimen/_15sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                app:boxStrokeColor="@color/sea_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/be_vietnam_pro"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:onTextChanged="@{f::onOtpTextChanged}"
                    android:textSize="@dimen/_15sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                app:boxStrokeColor="@color/sea_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/be_vietnam_pro"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:onTextChanged="@{f::onOtpTextChanged}"
                    android:textSize="@dimen/_15sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxStrokeColor="@color/sea_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/be_vietnam_pro"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:onTextChanged="@{f::onOtpTextChanged}"
                    android:textSize="@dimen/_15sdp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/TextInputEditTextStyleColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/be_vietnam_pro"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:onTextChanged="@{f::onPasswordTextChanged}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputConfirmPassword"
            style="@style/TextInputEditTextStyleColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/be_vietnam_pro"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:onTextChanged="@{f::onConfirmPasswordTextChanged}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/sea_green"
            android:fontFamily="@font/be_vietnam_pro_medium"
            android:onClick="@{() -> f.onResetPasswordClick()}"
            android:text="@string/resetPassword"
            android:textSize="@dimen/button_text_size"
            app:shapeAppearanceOverlay="@style/rounded_full" />

    </LinearLayout>

</layout>
